--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -110,10 +110,10 @@ metasmart:
   mail:
     enabled: ${MAIL_ENABLED:false}
     from: ${MAIL_FROM:noreply@metasmart.app}
-    frontend-url: ${FRONTEND_URL:https://metasmart.app}
+    frontend-url: ${FRONTEND_URL:https://smart-metas.onrender.com}
   cors:
     # REQUIRED: Set your production frontend URL(s)
-    allowed-origins: ${CORS_ALLOWED_ORIGINS:https://metasmart.app}
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:https://smart-metas.onrender.com}
     allowed-methods: GET,POST,PUT,PATCH,DELETE,OPTIONS
     allowed-headers: Authorization,Content-Type,X-Requested-With
     allow-credentials: true
