--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -51,7 +51,7 @@ metasmart:
     from: ${MAIL_FROM:noreply@metasmart.app}
     frontend-url: ${FRONTEND_URL:http://localhost:3000}
   cors:
-    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,https://smart-metas.onrender.com}
     allowed-methods: GET,POST,PUT,PATCH,DELETE,OPTIONS
     allowed-headers: Authorization,Content-Type,X-Requested-With
     allow-credentials: true
