feat: add Cloudinary integration for profile picture uploads
- Add Cloudinary dependency and configuration
- Create CloudinaryService with upload/delete functionality
- Add profilePictureUrl field to User entity
- Create upload/delete endpoints in UserController
- Add Flyway migration V4 for profile_picture_url column
- Configure multipart file upload (max 10MB)
- Auto-crop images to 400x400 with face detection
- Support JPEG, PNG, GIF, WebP formats
- Refactor milestone percentages to use constants
- Add password reset tests to AuthServiceTest

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <springdoc.version>2.7.0</springdoc.version>
     <stripe.version>28.2.0</stripe.version>
     <bucket4j.version>8.10.1</bucket4j.version>
+    <cloudinary.version>1.39.0</cloudinary.version>
   </properties>
   <dependencies>
     <dependency>
@@ -113,6 +114,11 @@
       <groupId>com.bucket4j</groupId>
       <artifactId>bucket4j-core</artifactId>
       <version>${bucket4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.cloudinary</groupId>
+      <artifactId>cloudinary-http44</artifactId>
+      <version>${cloudinary.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mapstruct</groupId>
