--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,12 @@ spring:
   application:
     name: metasmart
 
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/metasmart}
     username: ${DB_USERNAME:postgres}
@@ -73,6 +79,12 @@ stripe:
     struggling-assist: ${STRIPE_PRICE_STRUGGLING_ASSIST:}
     goal-boost: ${STRIPE_PRICE_GOAL_BOOST:}
     guardian-slot: ${STRIPE_PRICE_GUARDIAN_SLOT:}
+
+cloudinary:
+  cloud-name: ${CLOUDINARY_CLOUD_NAME:}
+  api-key: ${CLOUDINARY_API_KEY:}
+  api-secret: ${CLOUDINARY_API_SECRET:}
+  folder: ${CLOUDINARY_FOLDER:metasmart/profile-pictures}
 
 springdoc:
   api-docs:
